compiler/environment_tests/semantic_errors/001_p_supportedTypes.sht
#~ SHOULDPASS: All Supported Types ~#
const int a
int b
const float c
float d
const int[] e
int[] f
const float[] g
float[] h

